1999-12-01  Scott Thomas Haug  <sth2@cs.wustl.edu>

	* configure.in: 
	Changed the release information for 3.6.1.

	* NEWS:
	Updated for the 3.6.1 release.

	* README:
	Spelling error corrected.

	* ChangeLog:
	Coalesced all the ChangeLog's (previously one for each directory) into
	this toplevel ChangeLog.

	* src/id3/tag_render.cpp
	(RenderV1ToHandle): Removed reference to tagV1---not used.  Other
	minor windows-compatibility fixes.  (thanks elrod)

	* src/id3/tag_parse_v1.cpp
	(ParseID3v1): Minor fix for windows compatibility (thanks elrod).

	* src/id3/tag_file.cpp 
	(truncate): Added.  Defined only for windows, which doesn't have
	unistd.h available (thanks elrod).

	* src/id3/misc_support.cpp
	(ucslen): Now returns 0 if input is NULL (thanks elrod).

	* include/id3/misc_support.h: 
	Minor declaraction problem (thanks elrod).

	* include/id3/Makefile.am
	* include/Makefile.am
	(EXTRA_DIST): Removed.  No extra files to distribute

	* Makefile.am
	(SUBDIRS): Added "include".

	* configure.in 
	(AC_OUTPUT): Added include/Makefile and include/id3/Makefile

	* include/id3/Makefile.am: 
	Added.

	* include/Makefile.am: 
	Added.

	* src/id3/Makefile.am
	(INCLUDES): Now points to new, toplevel include directory.
	(the_headers, id3includedir, id3include_HEADERS): Removed.  Headers are
	no longer in this directory.

	* src/id3/dll_wrapper.cpp
	* src/id3/error.cpp
	* src/id3/field.cpp
	* src/id3/field_binary.cpp
	* src/id3/field_integer.cpp
	* src/id3/field_string_ascii.cpp
	* src/id3/field_string_unicode.cpp
	* src/id3/frame.cpp
	* src/id3/frame_parse.cpp
	* src/id3/frame_render.cpp
	* src/id3/header.cpp
	* src/id3/header_frame.cpp
	* src/id3/header_tag.cpp
	* src/id3/int28.cpp
	* src/id3/misc_support.cpp
	* src/id3/tag.cpp
	* src/id3/tag_file.cpp
	* src/id3/tag_find.cpp
	* src/id3/tag_parse.cpp
	* src/id3/tag_parse_lyrics3.cpp
	* src/id3/tag_parse_v1.cpp
	* src/id3/tag_render.cpp
	* src/id3/tag_sync.cpp
	* src/id3/version.cpp: